--- a/decarbFrontEnd/package.json
+++ b/decarbFrontEnd/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
-  },"dependencies": {
+  },
+  "dependencies": {
     "@angular/animations": "^18.2.7",
     "@angular/common": "^18.2.7",
     "@angular/compiler": "^18.2.7",
@@ -16,6 +17,7 @@
     "@angular/platform-browser": "^18.2.7",
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
+    "hello": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
