--- a/decarbFrontEnd/package.json
+++ b/decarbFrontEnd/package.json
@@ -14,6 +14,8 @@
     "@angular/compiler": "^18.2.7",
     "@angular/core": "^18.2.7",
     "@angular/forms": "^18.2.7",
+    "@angular/google-maps": "^18.2.12",
+    "@angular/material": "^18.2.12",
     "@angular/platform-browser": "^18.2.7",
     "@angular/platform-browser-dynamic": "^18.2.7",
     "@angular/router": "^18.2.7",
