--- a/decarbFrontEnd/package.json
+++ b/decarbFrontEnd/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^18.2.11",
     "@angular/platform-browser-dynamic": "^18.2.11",
     "@angular/router": "^18.2.11",
+    "chart.js": "^4.4.7",
     "hello": "file:",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
